# CondaRTS

./: .gitignore  .pre-commit-config.yaml  CondaRTS.py  LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/: ai.py  barracks.py  building.py  camera.py  constants.py  fog_of_war.py  game.py  game_console.py  game_object.py  geometry.py  harvester.py  headquarters.py  infantry.py  iron_field.py  particle.py  power_plant.py  projectile.py  shapes.py  tank.py  turret.py  war_factory.py
src/game_objects/: game_object.py
src/game_objects/buildings/: barracks.py  building.py  headquarters.py  power_plant.py  turret.py  war_factory.py
src/game_objects/units/: harvester.py  infantry.py  tank.py
