[project]
name = "CondaRTS"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = [
    "ANN201",  # Missing return type annotation for public function
    "ANN204",  # Missing return type annotation for special method
    "I",  # isort
    "TC",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"CondaRTS.py" = [
    "ANN201",
    "ANN204",
    "COM812",  # Trailing comma missing - conflicts with ruff format
]
