[project]
name = "CondaRTS"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = [
    "ANN201",  # Missing return type annotation for public function
    "ANN204",  # Missing return type annotation for special method
    "F",  # Pyflakes
    "I",  # isort
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"CondaRTS.py" = [
    "COM812",  # Trailing comma missing - conflicts with ruff format
]
