[project]
name = "CondaRTS"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "F",  # Pyflakes
    "I",  # isort
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
]

[tool.ruff.lint.per-file-ignores]
"CondaRTS.py" = [
    "ANN001",  # Missing type annotation for function argument
    "COM812",  # Trailing comma missing - conflicts with ruff format
]
